RESOLVED FIXED156507
Fixed uninitialization of Node::DataUnion with GCC 4.8.
https://bugs.webkit.org/show_bug.cgi?id=156507
Summary Fixed uninitialization of Node::DataUnion with GCC 4.8.
Konstantin Tokarev
Reported 2016-04-12 11:34:22 PDT
This change fixes run time crashes caused by access to uninitialized memory in Node::renderer().
Attachments
Patch (1.40 KB, patch)
2016-04-12 12:15 PDT, Konstantin Tokarev
no flags
Konstantin Tokarev
Comment 1 2016-04-12 12:15:15 PDT
Michael Catanzaro
Comment 2 2016-04-12 12:56:08 PDT
Comment on attachment 276260 [details] Patch Seems clearer this way regardless....
WebKit Commit Bot
Comment 3 2016-04-12 13:47:35 PDT
Comment on attachment 276260 [details] Patch Clearing flags on attachment: 276260 Committed r199385: <http://trac.webkit.org/changeset/199385>
WebKit Commit Bot
Comment 4 2016-04-12 13:47:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.