Fixed uninitialization of Node::DataUnion with GCC 4.8. https://bugs.webkit.org/show_bug.cgi?id=156507

Patch by Konstantin Tokarev <annulen@yandex.ru> on 2016-04-12
Reviewed by Michael Catanzaro.

This change fixes run time crashes caused by access to uninitialized
memory in Node::renderer().

No new tests needed.

* dom/Node.h:

Canonical link: https://commits.webkit.org/174619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199385 268f45cc-cd09-0410-ab3c-d52691b4dbfc